fixing icon spacing

--- a/styles.css
+++ b/styles.css
@@ -28,8 +28,8 @@ h1, h2, h3, h4, p{
     margin-bottom: 10px;
 }
 hr{
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     border-color: hsl(215, 32%, 27%);
 }
 h1 {
@@ -63,11 +63,11 @@ h4{
     vertical-align: middle;
 }
 .icon{
-    margin-right: 5px;
+    margin-right: 4px;
     align-self: center;
 }
 .avatar{
-    width: 40px;
+    width: 80px;
     border-radius: 50%;
     border: 1px solid white;
     margin-right: 10px;
